log/build_2026-03-21_18-51-37/brain/stderr.log
/home/pavel/jetbot_orgon_ws/src/install/brain/lib/python3.12/site-packages/brain/brain_node.py:37: SyntaxWarning: invalid escape sequence '\h'
  '\hand_of_god/target_pose', # топик принимающий IK
  File "/home/pavel/jetbot_orgon_ws/src/install/brain/lib/python3.12/site-packages/brain/brain_node.py", line 58
    def pose_publisher(self,)
                             ^
SyntaxError: expected ':'

